codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_workspace_headline.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
❯ [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] workspace-headline    Workspace notification headline (Enterprise workspaces only; omitted …
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level
  [ ] reasoning             Current reasoning level
  [ ] current-dir           Current working directory
  [ ] project-name          Project name (omitted when unavailable)

  Workspace maintenance starts at 5pm
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
